--- a/config/swaync/style.css
+++ b/config/swaync/style.css
@@ -274,20 +274,32 @@ slider {
   margin: 15px 5px 0; 
 }
 
-.widget-mpris .widget-mpris-player {
+.mpris-background {
+      filter: blur(10px);
+}
+
+.widget-mpris-player {
   background: #313244;
   padding: 7px;
   border-radius: 8px;
+  margin: 0px 10px;
+}
+
+.widget-mpris-album-art {
+  border-radius: 12px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.75);
 }
 
 /* .widget-mpris-player {margin: 0px 5px; } */
 
-.widget-mpris .widget-mpris-title {
+.widget-mpris-title {
+  font-weight: bold;
   font-size: 1.2rem;
 }
 
-.widget-mpris .widget-mpris-subtitle {
-  font-size: 0.8rem;
+.widget-mpris-subtitle {
+  font-size: 1.1rem;
+  padding: 10px;
 }
 
 .control-center .widget-label > label {
