--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -70,6 +70,10 @@ window#waybar {
   color: @foreground;
 }
 
+#custom-notification, #custom-system {
+  color: @color4;
+}
+
 window#waybar.empty #window {
   background-color: @color-transparent;
 }
